force-app/main/default/objects/Training_Attendee__c/Training_Attendee__c.object-meta.xml
<CustomObject>
    <label>Training Attendee</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Training Attendee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>