force-app/main/default/objects/Training_Attendee__c/fields/a_unnecessary_field__c.field-meta.xml
<CustomField>
    <fullName>a_unnecessary_field__c</fullName>
    <label>a unnecessary field</label>
    <length>2</length>
    <type>Text</type>
</CustomField>